[tool.poetry]
name = "domestic-economy"
version = "0.1.0"
description = ""
authors = ["Oscar MJ <omarinello@indoorclima.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.3"
openpyxl = "^3.1.5"
streamlit = "^1.52.1"
plotly = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
